# ZAAAAAAAAAAAAppy

./: .gdb_history  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Makefile  README.md  _animation_8cpp.html  _animation_8cpp__incl.map  _animation_8cpp__incl.md5  _animation_8cpp_source.html  _animation_8hpp.html  _animation_8hpp__dep__incl.map  _animation_8hpp__dep__incl.md5  _animation_8hpp__incl.map  _animation_8hpp__incl.md5  _animation_8hpp_source.html  _core_8cpp.html  _core_8cpp__incl.map  _core_8cpp__incl.md5  _core_8cpp_source.html  _core_8hpp.html  _core_8hpp__dep__incl.map  _core_8hpp__dep__incl.md5  _core_8hpp__incl.map  _core_8hpp__incl.md5  _core_8hpp_source.html  _entity_8cpp.html  _entity_8cpp_source.html  _entity_8hpp.html  _entity_8hpp.js  _entity_8hpp__dep__incl.map  _entity_8hpp__dep__incl.md5  _entity_8hpp__incl.map  _entity_8hpp__incl.md5  _entity_8hpp_source.html  _event_8hpp.html  _event_8hpp__dep__incl.map  _event_8hpp__dep__incl.md5  _event_8hpp__incl.map  (+1379 more)
bonus/: main.dart
src/zappy_ai_src/network/: CMakeLists.txt  entrypoint.c
src/zappy_ai_src/network/api/: CMakeLists.txt  authentification.c
src/zappy_ai_src/network/api/ask/: broadcast.c  connectnbr.c  eject.c  fork.c  forward.c  incantation.c  inventory.c  join.c  look.c  place.c  send_request.c  take.c  turn.c
src/zappy_ai_src/network/api/get/: broadcast.c  connectnbr.c  eject.c  fork.c  forward.c  incantation.c  inventory.c  join.c  look.c  place.c  retcode.c  state.c  take.c  turn.c  unexpected.c
src/zappy_ai_src/network/api/include/: api.h  intern_data.h
src/zappy_ai_src/network/net_utils/: CMakeLists.txt  client_utils.c  fetch_message.c  manage_fd_sets.c  send_message.c  update_client.c
src/zappy_ai_src/network/net_utils/include/: client_utils.h  internals.h
src/zappy_gui/: CMakeLists.txt  Exception.hpp  GUI.cpp  GUI.hpp  GameInfo.cpp  GameInfo.hpp  data_game.h  enum.h  global.h  launch_gui.cpp  main.cpp  packunpack.cpp  unpack.c  unpack.cpp
src/zappy_gui/Core/: CMakeLists.txt  Core.cpp  Core.hpp
src/zappy_gui/Core/SFML/: CMakeLists.txt  SFML.cpp  SFML.hpp
src/zappy_gui/Core/SFML/Interface/: CMakeLists.txt  Interface.cpp  Interface.hpp
src/zappy_gui/Core/SFML/Map/: CMakeLists.txt  Map.cpp  Map.hpp
src/zappy_gui/Core/SFML/WrapperSFML/: CMakeLists.txt  Event.hpp
src/zappy_gui/network/: CMakeLists.txt  entrypoint.c
src/zappy_gui/network/api/: CMakeLists.txt
src/zappy_gui/network/api/get/: retcode.c  unexpected.c
src/zappy_gui/network/api/include/: api.h  intern_data.h
src/zappy_gui/network/net_utils/: CMakeLists.txt
src/zappy_gui/raylib/: CMakeLists.txt  Raylib.cpp  Raylib.hpp
src/zappy_gui_src/: CMakeLists.txt  main.cpp  valgrind-out
src/zappy_gui_src/Core/: CMakeLists.txt  Core.cpp  Core.hpp
src/zappy_gui_src/Core/Animation/: Animation.cpp  Animation.hpp  CMakeLists.txt
src/zappy_gui_src/Core/Entity/: CMakeLists.txt  Entity.hpp
src/zappy_gui_src/Core/Network/: CMakeLists.txt  Unpack.cpp  Unpack.hpp  entrypoint.c  pack.c  pack.h  player.c  tile.c  unpack.cpp  unpack.hpp
src/zappy_gui_src/Core/Network/Include/: tile.h
src/zappy_gui_src/Core/Network/api/: CMakeLists.txt  authentification.c
src/zappy_gui_src/Core/Network/net_utils/: CMakeLists.txt  client_utils.c  fetch_message.c  manage_fd_sets.c
src/zappy_gui_src/Core/SFML/: Animation.cpp  Animation.hpp  CMakeLists.txt  SFML.cpp  SFML.hpp
src/zappy_gui_src/Core/SFML/Interface/: CMakeLists.txt  Interface.cpp  Interface.hpp
src/zappy_gui_src/Core/SFML/Map/: CMakeLists.txt  Map.cpp  Map.hpp  Tile.cpp  Tile.hpp
src/zappy_gui_src/Core/SFML/WrapperSFML/: CMakeLists.txt  Event.hpp
src/zappy_gui_src/Core/network/: CMakeLists.txt
src/zappy_gui_src/Exception/: CMakeLists.txt  ZappyGuiException.cpp  ZappyGuiException.hpp
src/zappy_gui_src/network/: CMakeLists.txt
src/zappy_gui_src/network/api/: CMakeLists.txt  authentification.c
src/zappy_gui_src/network/api/get/: restart.c
src/zappy_gui_src/network/api/include/: api.h  intern_data.h
src/zappy_gui_src/network/net_utils/: CMakeLists.txt  fetch_message.c  send_message.c  update_client.c
src/zappy_server_src/: CMakeLists.txt  entrypoint.c
src/zappy_server_src/core/: CMakeLists.txt  argument_handling.c  argument_handling.c.tmp  auth_command.c  auth_command.c.tmp  cmake_error.c  command_hold.c  command_hold.c.tmp  container_utils.c  end_game_gestion.c  map.c  map_utils.c  my_zappy_server.c  my_zappy_server.c.tmp  player_life.c  resource_generation.c  ressource_generation.c  scheduler.c  scheduler_delete.c  server_data.c  server_data.c.tmp  server_init.c  server_run.c  server_run.c.tmp  team.c  teams_remove.c
src/zappy_server_src/core/commands/: CMakeLists.txt  auth_command.c  broadcast_command.c  broadcast_process.c  connectnbr_command.c  eject_command.c  eject_process.c  entity_info.c  fork_command.c  fork_utils.c  forward_command.c  game_status.c  incantation_command.c  inventory_command.c  join_command.c  look_command.c  look_process.c  look_utils.c  map_info.c  place_command.c  start_information.c  take_command.c  turn_command.c  unexpected_send.c
src/zappy_server_src/core/entity/: CMakeLists.txt  egg.c  entity.c  entity_delete.c  entity_diff.c  entity_diff_remove.c  entity_wrapper.c  entity_wrapper_add.c  entity_wrapper_create.c  entity_wrapper_remove.c  pack.c  pack.h  pack_get_len.c  pack_utils.c  player.c  tile.c
src/zappy_server_src/core/include/: argument_handling.h  broadcast.h  command_hold.h  command_hold.h.tmp  container.h  container_manip.h  density_flutter.h  entity.h  entity_types.h  entrypoint.h  incantation.h  map.h  my_zappy_server.h  my_zappy_server.h.tmp  player.h  rcodes.h  rcodes.h.tmp  remove_inventory.h  server.h  server.h.tmp  team.h
src/zappy_server_src/net_utils/: CMakeLists.txt  display_utils.c  peer.c  select.c  select.c.tmp  tcp_server.c
src/zappy_server_src/net_utils/fd_sets_manage/: CMakeLists.txt  fd_set_manage.h  fd_sets_manage.c  server_accept_new_client.c  server_close_client.c  server_read_client.c  server_write_client.c
src/zappy_server_src/net_utils/include/: net_utils.h
(+231 files in other folders)
